fix java 9 release